HIVE-29834: Take the value a MIN or MAX folds out of its conditional
- an arrow switch per type, the bound read into a local before it is cast
- aggregateColumns collects in one pass, pattern matching instead of casts